--- a/security/py-pyhanko/Makefile
+++ b/security/py-pyhanko/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	pyhanko
-PORTVERSION=	0.19.0
+PORTVERSION=	0.20.0
 CATEGORIES=	security python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -7,7 +7,8 @@ DISTNAME=	pyHanko-${PORTVERSION}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Tools for stamping and signing PDF files
-WWW=		https://github.com/MatthiasValvekens/pyHanko
+WWW=		https://pyhanko.readthedocs.io/en/latest/ \
+		https://github.com/MatthiasValvekens/pyHanko
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -20,7 +21,7 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}asn1crypto>=1.5.1:devel/py-asn1crypto@${PY_F
 		${PYTHON_PKGNAMEPREFIX}yaml>=5.3.1:devel/py-yaml@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}qrcode>=6.1:textproc/py-qrcode@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}requests>=2.24.0:www/py-requests@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}tzlocal>=4.3:devel/py-tzlocal@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}tzlocal>=4.2:devel/py-tzlocal@${PY_FLAVOR}
 
 USES=		pycryptography:run python
 USE_PYTHON=	autoplist concurrent pep517
@@ -34,18 +35,18 @@ PKGCS11_DESC=	PKGCS\#11 support
 XMP_DESC=	XMP (Extensible Metadata Platform) support
 
 IMAGE_SUPPORT_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pillow>=7.2.0:graphics/py-pillow@${PY_FLAVOR} \
-			${PYTHON_PKGNAMEPREFIX}python-barcode>=0.14.0<0.14.0_99:graphics/py-python-barcode@${PY_FLAVOR}
+			${PYTHON_PKGNAMEPREFIX}python-barcode>=0.15.1<0.15.1_99:graphics/py-python-barcode@${PY_FLAVOR}
 OPENTYPE_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}fonttools>=4.33.3:print/py-fonttools@${PY_FLAVOR} \
-			${PYTHON_PKGNAMEPREFIX}uharfbuzz>=0.25.0:print/py-uharfbuzz@${PY_FLAVOR}
+			${PYTHON_PKGNAMEPREFIX}uharfbuzz>=0.25.0<0.38.0:print/py-uharfbuzz@${PY_FLAVOR}
 PKGCS11_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}python-pkcs11>=0.7.0<0.8:security/py-python-pkcs11@${PY_FLAVOR}
 XMP_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}defusedxml>=0.7.1<0.8:devel/py-defusedxml@${PY_FLAVOR}
 
 .include <bsd.port.pre.mk>
 
 .if ${PYTHON_REL} < 30900
-# tzdata is from backports.zoneinfo[tzdata]
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}backports.zoneinfo>=0:devel/py-backports.zoneinfo@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}tzdata>=0:devel/py-tzdata@${PY_FLAVOR}
+RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}backports.zoneinfo>=0:devel/py-backports.zoneinfo@${PY_FLAVOR}
+# backports.zoneinfo[tzdata]
+RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}tzdata>=0:devel/py-tzdata@${PY_FLAVOR}
 .endif
 
 .include <bsd.port.post.mk>
