--- a/www/py-httpx-cache/files/patch-pyproject.toml
+++ b/www/py-httpx-cache/files/patch-pyproject.toml
@@ -1,17 +1,11 @@
 --- pyproject.toml.orig	2020-02-02 00:00:00 UTC
 +++ pyproject.toml
-@@ -33,11 +33,11 @@ classifiers = [
-   "Programming Language :: Python :: 3 :: Only",
- ]
- dependencies = [
--  "httpx~=0.23",
-+  "httpx>=0.23",
+@@ -36,7 +36,7 @@ dependencies = [
+   "httpx>=0.23,<1",
    "anyio~=3.0",
    "msgpack~=1.0",
 -  "fasteners>=0.16.3,<0.18.0",
--  "attrs>=21.4,<23.0",
 +  "fasteners>=0.16.3",
-+  "attrs>=21.4",
+   "attrs>=21.4,<24.0",
    "aiorwlock~=1.2"
  ]
- 
