devel/rubygem-google-apis-cloudresourcemanager_v2: Update WWW

--- a/devel/rubygem-google-apis-cloudresourcemanager_v2/Makefile
+++ b/devel/rubygem-google-apis-cloudresourcemanager_v2/Makefile
@@ -5,7 +5,8 @@ MASTER_SITES=	RG
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Simple REST client for Cloud Resource Manager API V2
-WWW=		https://github.com/googleapis/google-api-ruby-client/tree/main/generated/google-apis-cloudresourcemanager_v2
+WWW=		https://github.com/googleapis/google-api-ruby-client/tree/main/generated/google-apis-cloudresourcemanager_v2 \
+		https://github.com/googleapis/google-api-ruby-client
 
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE.md
