--- a/devel/rubygem-google-apis-iam_v2beta/Makefile
+++ b/devel/rubygem-google-apis-iam_v2beta/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	google-apis-iam_v2beta
-PORTVERSION=	0.9.0
+PORTVERSION=	0.10.0
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Simple REST client for Identity and Access Management (IAM) API V2beta
-WWW=		https://github.com/googleapis/google-api-ruby-client/tree/main/generated/google-apis-iam_v2beta
+WWW=		https://github.com/googleapis/google-api-ruby-client/tree/main/generated/google-apis-iam_v2beta \
+		https://github.com/googleapis/google-api-ruby-client
 
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE.md
