--- a/devel/rubygem-google-apis-iam_v2/Makefile
+++ b/devel/rubygem-google-apis-iam_v2/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	google-apis-iam_v2
-PORTVERSION=	0.2.0
+PORTVERSION=	0.3.0
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Simple REST client for Identity and Access Management (IAM) API V2
-WWW=		https://github.com/googleapis/google-api-ruby-client/tree/main/generated/google-apis-iam_v2
+WWW=		https://github.com/googleapis/google-api-ruby-client/tree/main/generated/google-apis-iam_v2 \
+		https://github.com/googleapis/google-api-ruby-client
 
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE.md
