--- a/devel/rubygem-googleapis-common-protos-types/Makefile
+++ b/devel/rubygem-googleapis-common-protos-types/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	googleapis-common-protos-types
-PORTVERSION=	1.6.0
+PORTVERSION=	1.7.0
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Common protocol buffer types used by Google APIs
-WWW=		https://github.com/googleapis/common-protos-ruby/tree/main/googleapis-common-protos-types
+WWW=		https://github.com/googleapis/common-protos-ruby/tree/main/googleapis-common-protos-types \
+		https://github.com/googleapis/common-protos-ruby
 
 LICENSE=	APACHE20
 
