--- a/www/rubygem-rails61/Makefile
+++ b/www/rubygem-rails61/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	rails
 PORTVERSION=	6.1.7.4
+PORTREVISION=	1
 CATEGORIES=	www rubygems
 MASTER_SITES=	RG
 PKGNAMESUFFIX=	61
@@ -35,13 +36,12 @@ RUN_DEPENDS=	rubygem-actioncable61>=${PORTVERSION}<${PORTVERSION}_99:www/rubygem
 		rubygem-puma>=0:www/rubygem-puma \
 		rubygem-rake>=11.1:devel/rubygem-rake \
 		rubygem-sass-rails-rails61>=0:textproc/rubygem-sass-rails-rails61 \
-		rubygem-selenium-webdriver>=4.0.0:www/rubygem-selenium-webdriver \
+		rubygem-selenium-webdriver>=4.11.0:www/rubygem-selenium-webdriver \
 		rubygem-spring>=0:devel/rubygem-spring \
 		rubygem-sqlite3>=1.4<2:databases/rubygem-sqlite3 \
 		rubygem-turbolinks>=5<6:www/rubygem-turbolinks \
 		rubygem-uglifier>=1.3.0:www/rubygem-uglifier \
 		rubygem-web-console-rails61>=3.3.0:devel/rubygem-web-console-rails61 \
-		rubygem-webdrivers>=0:www/rubygem-webdrivers \
 		rubygem-webmock>=0:www/rubygem-webmock \
 		rubygem-webpacker-rails61>=5.0<6:devel/rubygem-webpacker-rails61 \
 		rubygem-webrick>=0:www/rubygem-webrick
