--- a/www/rubygem-rails70/Makefile
+++ b/www/rubygem-rails70/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	rails
 PORTVERSION=	7.0.6
+PORTREVISION=	1
 CATEGORIES=	www rubygems
 MASTER_SITES=	RG
 PKGNAMESUFFIX=	70
@@ -44,14 +45,13 @@ RUN_DEPENDS=	rubygem-actioncable70>=${PORTVERSION}<${PORTVERSION}_99:www/rubygem
 		rubygem-rake>=11.1:devel/rubygem-rake \
 		rubygem-redis-namespace>=0:databases/rubygem-redis-namespace \
 		rubygem-rexml>=0:textproc/rubygem-rexml \
-		rubygem-selenium-webdriver>=4.0.0:www/rubygem-selenium-webdriver \
+		rubygem-selenium-webdriver>=4.11.0:www/rubygem-selenium-webdriver \
 		rubygem-sprockets-rails-rails70>=2.0.0:devel/rubygem-sprockets-rails-rails70 \
 		rubygem-sqlite3>=1.4<2:databases/rubygem-sqlite3 \
 		rubygem-stimulus-rails>=0:www/rubygem-stimulus-rails \
 		rubygem-sucker_punch>=0:devel/rubygem-sucker_punch \
 		rubygem-tailwindcss-rails>=0:www/rubygem-tailwindcss-rails \
 		rubygem-turbo-rails>=0:www/rubygem-turbo-rails \
-		rubygem-webdrivers>=0:www/rubygem-webdrivers \
 		rubygem-webmock>=0:www/rubygem-webmock \
 		rubygem-webrick>=0:www/rubygem-webrick
 
