devel/rubygem-statsd-instrument: Update to 3.5.11
- Update WWW

Changes:	https://github.com/Shopify/statsd-instrument/blob/master/CHANGELOG.md

--- a/devel/rubygem-statsd-instrument/Makefile
+++ b/devel/rubygem-statsd-instrument/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	statsd-instrument
-PORTVERSION=	3.5.10
+PORTVERSION=	3.5.11
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
 MAINTAINER=	ruby@FreeBSD.org
 COMMENT=	StatsD client for Ruby applications
-WWW=		https://github.com/Shopify/statsd-instrument
+WWW=		https://shopify.github.io/statsd-instrument/ \
+		https://github.com/Shopify/statsd-instrument
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
