x11/nvidia-driver: Add Makefile.version and patch for nvidia-drm
This moves the version string into a makefile that can be included from
child ports.

This also adds a patch to nvidia-modeset that handles a deadlock with
queueing events observed with nvidia-drm. This fix is only needed in
535, future versions will have a proper implementation included with
them.

Approved by:	maintainer timeout
Differential Revision:	https://reviews.freebsd.org/D40168

--- a/x11/linux-nvidia-libs/Makefile
+++ b/x11/linux-nvidia-libs/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	nvidia-libs
-DISTVERSION?=	535.98
+DISTVERSION?=	${NVIDIA_DISTVERSION}
 # Always try to set PORTREVISION as it can be overridden by the slave ports
 PORTREVISION?=	0
 CATEGORIES=	x11 linux
@@ -13,6 +13,7 @@ COMMENT=	NVidia graphics libraries and programs (Linux version)
 WWW=		https://www.nvidia.com/object/unix.html
 
 LICENSE_FILE=	${WRKSRC}/LICENSE
+.include "${.CURDIR}/../nvidia-driver/Makefile.version"
 .include "${.CURDIR}/../nvidia-driver/Makefile.common"
 
 .if ${DISTVERSION:R} > 390
