textproc/tidyp: Update WWW
tidyp.com is expired.

Reference:	https://web.archive.org/web/20190205230744/http://tidyp.com:80/
		https://web.archive.org/web/20190309025618/http://tidyp.com:80/

--- a/textproc/tidyp/Makefile
+++ b/textproc/tidyp/Makefile
@@ -5,21 +5,22 @@ CATEGORIES=	textproc www
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Library and program to validate and fix HTML
-WWW=		http://tidyp.com/
+WWW=		https://github.com/petdance/tidyp
+
+USES=		autoreconf libtool
 
 CONFIGURE_ARGS=	--enable-asian --enable-utf16
 GNU_CONFIGURE=	yes
 INSTALL_TARGET=	install-strip
 USE_LDCONFIG=	yes
-USES=		autoreconf libtool
+
+PLIST_SUB=	PORTVERSION=${PORTVERSION}
 
 GH_ACCOUNT=	petdance
 USE_GITHUB=	yes
 
 OPTIONS_DEFINE=	ACCESS DEBUG
 ACCESS_DESC=	Accessibility checks
-
-PLIST_SUB=	PORTVERSION=${PORTVERSION}
 
 ACCESS_CONFIGURE_ENABLE=access
 DEBUG_CONFIGURE_ENABLE=	debug
