lang/eisl: Fix build with llvm16
Approved by:	portmgr (blanket)
Sponsored by:	The FreeBSD Foundation

--- a/lang/eisl/Makefile
+++ b/lang/eisl/Makefile
@@ -39,4 +39,8 @@ EXTRA_PATCHES=	${FILESDIR}/extra-patch-makefile
 CFLAGS+=	-Wno-error=int-conversion
 .endif
 
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400092 || ( ${OSVERSION} >= 1302507 && ${OSVERSION} < 1400000 ))
+CFLAGS+=	-Wno-error=incompatible-function-pointer-types
+.endif
+
 .include <bsd.port.post.mk>
