emulators/rpcs3: update to 0.0.29.15487
Changes:	https://github.com/RPCS3/rpcs3/compare/968762c135...384c807d6a

--- a/emulators/rpcs3/Makefile
+++ b/emulators/rpcs3/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	rpcs3
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.0.29-15482 # git rev-list --count HEAD
-DISTVERSIONSUFFIX=	-g968762c135
+DISTVERSION=	0.0.29-15487 # git rev-list --count HEAD
+DISTVERSIONSUFFIX=	-g384c807d6a
 CATEGORIES=	emulators wayland
 
 MAINTAINER=	jbeich@FreeBSD.org
