--- a/devel/py-debugpy/Makefile
+++ b/devel/py-debugpy/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	debugpy
-PORTVERSION=	1.6.8
+PORTVERSION=	1.6.7
+PORTREVISION=	1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
