graphics/mesa-devel: update to 23.2.0.b.2503
Changes:	https://gitlab.freedesktop.org/mesa/mesa/-/compare/da5ca7529f7...783d59eec1a

--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	23.2.0-branchpoint-2398
-DISTVERSIONSUFFIX=	-gda5ca7529f7
+DISTVERSION=	23.2.0-branchpoint-2503
+DISTVERSIONSUFFIX=	-g783d59eec1a
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
