x11/plasma5-plasma-integration: add missing dependency on pwp
- this was previously a transitive dependency, that was lost in
  f733f4069b4e53ee20d16df4d57b50a6ab650735

Reported by:	fluffy

--- a/x11/plasma5-plasma-integration/Makefile
+++ b/x11/plasma5-plasma-integration/Makefile
@@ -16,7 +16,7 @@ USE_KDE=	auth bookmarks breeze codecs completion config configwidgets \
 		coreaddons i18n iconthemes itemviews jobwidgets kio \
 		notifications service solid wayland widgetsaddons windowsystem \
 		xdg-desktop-portal-kde xmlgui \
-		ecm:build \
+		ecm:build plasma-wayland-protocols:build \
 		qqc2-desktop-style:run
 USE_QT=		concurrent core dbus declarative gui network quickcontrols2 \
 		wayland widgets x11extras xml \
