x11-toolkits/gtk40: unbreak with clang 16 on i386 after c7b4ee785e1d
../gdk/gdkvulkancontext.c:1158:3: error: incompatible pointer to integer conversion returning 'void *' from a function with result type 'VkPipelineCache' (aka 'unsigned long long') [-Wint-conversion]
  g_return_val_if_fail (GDK_IS_VULKAN_CONTEXT (self), NULL);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/include/glib-2.0/glib/gmessages.h:660:16: note: expanded from macro 'g_return_val_if_fail'
        return (val); \
               ^~~~~
../gdk/gdkvulkancontext.c:1653:30: error: incompatible pointer to integer conversion passing 'gpointer' (aka 'void *') to parameter of type 'VkShaderModule' (aka 'unsigned long long') [-Wint-conversion]
                             value,
                             ^~~~~
/usr/local/include/vulkan/vulkan_core.h:4410:49: note: passing argument to parameter 'shaderModule' here
    VkShaderModule                              shaderModule,
                                                ^
../gdk/gdkvulkancontext.c:1693:10: error: incompatible pointer to integer conversion assigning to 'VkShaderModule' (aka 'unsigned long long') from 'gpointer' (aka 'void *') [-Wint-conversion]
  shader = g_hash_table_lookup (self->vk_shader_modules, resource_name);
         ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../gdk/gdkvulkancontext.c:1714:79: error: incompatible integer to pointer conversion passing 'VkShaderModule' (aka 'unsigned long long') to parameter of type 'gpointer' (aka 'void *') [-Wint-conversion]
      g_hash_table_insert (self->vk_shader_modules, g_strdup (resource_name), shader);
                                                                              ^~~~~~
/usr/local/include/glib-2.0/glib/ghash.h:74:61: note: passing argument to parameter 'value' here
                                            gpointer        value);
                                                            ^

Reported by:	pkg-fallout

--- a/x11-toolkits/gtk40/Makefile
+++ b/x11-toolkits/gtk40/Makefile
@@ -71,6 +71,7 @@ VULKAN_BUILD_DEPENDS=	glslc:graphics/shaderc \
 VULKAN_LIB_DEPENDS=	libvulkan.so:graphics/vulkan-loader
 VULKAN_RUN_DEPENDS=	vulkan-headers>0:graphics/vulkan-headers
 VULKAN_MESON_ENABLED=	vulkan
+VULKAN_CFLAGS=		-Wno-error=int-conversion # https://gitlab.gnome.org/GNOME/gtk/-/issues/6033
 
 WAYLAND_DESC=		GDK Wayland backend
 WAYLAND_MESON_TRUE=	wayland-backend
