www/vigil: New port: Monitor distributed infrastructure and send alerts (Slack, SMS, etc.)

--- a/www/Makefile
+++ b/www/Makefile
@@ -2398,6 +2398,7 @@
     SUBDIR += vdradmin-am
     SUBDIR += vertx
     SUBDIR += vger
+    SUBDIR += vigil
     SUBDIR += vimb
     SUBDIR += visitors
     SUBDIR += volta
