www/zgrab2: Broken on aarch64
Reported by:	fallout

(cherry picked from commit ca12a66a8faf72e6f4e7e98dd7becc509c2b1008)

--- a/www/zgrab2/Makefile
+++ b/www/zgrab2/Makefile
@@ -11,6 +11,8 @@ WWW=		https://github.com/zmap/zgrab2
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BROKEN_aarch64=	compilation fails: ztypes_freebsd_arm64.go:400:12: undefined: uint128
+
 USES=		go:modules
 
 GO_MODULE=	github.com/zmap/zgrab2
