devel/seer-gdb: New port: GUI frontend to gdb

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7551,6 +7551,7 @@
     SUBDIR += sdsl-lite
     SUBDIR += sdts++
     SUBDIR += sedsed
+    SUBDIR += seer-gdb
     SUBDIR += selene
     SUBDIR += sentry-cli
     SUBDIR += serd
