www/qt6-webview: new port -- Qt WebView lets you display web content inside a QML application

--- a/www/Makefile
+++ b/www/Makefile
@@ -1855,6 +1855,7 @@
     SUBDIR += qt6-httpserver
     SUBDIR += qt6-webchannel
     SUBDIR += qt6-webengine
+    SUBDIR += qt6-webview
     SUBDIR += qt6-websockets
     SUBDIR += quark
     SUBDIR += qutebrowser
