devel/yyjson: A high performance C JSON library.
Needed for upcoming update of sysutils/fastfetch.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7827,6 +7827,7 @@
     SUBDIR += yder
     SUBDIR += youcompleteme
     SUBDIR += yuck
+    SUBDIR += yyjson
     SUBDIR += z80-asm
     SUBDIR += z80asm
     SUBDIR += z80ex
