sysutils/terraform: Update to 1.5.5
ChangeLog: https://github.com/hashicorp/terraform/releases/tag/v1.5.5

terraform init: Fix crash when using invalid configuration in backend blocks.

PR:		273170
Reported by:	nulldutra@proton.me (maintainer)

--- a/sysutils/terraform/Makefile
+++ b/sysutils/terraform/Makefile
@@ -1,15 +1,15 @@
 PORTNAME=	terraform
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.5.4
-PORTREVISION=	1
+DISTVERSION=	1.5.5
 CATEGORIES=	sysutils
 
 MAINTAINER=	nulldutra@proton.me
 COMMENT=	Provides a common configuration to launch infrastructure
 WWW=		https://terraform.io/
 
-LICENSE=	MPL20
+LICENSE_NAME=	Business Source License 1.1
 LICENSE_FILE=	${WRKSRC}/LICENSE
+LICENSE_PERMS=	dist-mirror pkg-mirror pkg-sell auto-accept
 
 USES=		cpe go:modules
 CPE_VENDOR=	hashicorp
