Revert "x11-toolkits/kf5-kirigami2: fix build without libomp"
This reverts commit da1a3d2bae70f9283ecba474ca7a44fde0758414.

CheriBSD without libomp builds fine x11-toolkits/kf5-kirigami2.
Another solution that would allow using LLVM in case of missing libomp
must be found as enforcing GCC in such case completely breaks for
targets without GCC support.

--- a/x11-toolkits/kf5-kirigami2/Makefile
+++ b/x11-toolkits/kf5-kirigami2/Makefile
@@ -5,12 +5,7 @@ CATEGORIES=	x11-toolkits kde kde-frameworks
 MAINTAINER=	kde@FreeBSD.org
 COMMENT=	QtQuick based components set
 
-USES=		cmake gettext kde:5 qt:5 tar:xz
-.if !exists(/usr/include/omp.h)
-USES+=		compiler:gcc-c++11-lib
-.else
-USES+=		compiler:c++11-lib
-.endif
+USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
 USE_KDE=	kdeclarative \
 		ecm:build
 USE_QT=		core concurrent dbus declarative graphicaleffects gui \
