devel/cmake-core: mark as broken for CheriABI user-mode
The QEMU CheriABI user-mode implements threading but currently cannot
handle concurrent tags for multiple threads. Use hybrid ABI cmake until
we fix the user mode.

--- a/devel/cmake-core/Makefile
+++ b/devel/cmake-core/Makefile
@@ -5,6 +5,11 @@ PORTREVISION=	1
 CATEGORIES=	devel
 PKGNAMESUFFIX=	-core
 
+.ifdef QEMU_EMULATING
+BROKEN_purecap=	concurrent tags implementation in the user mode is broken
+USE_PKG64=	1
+.endif
+
 MAINTAINER=	kde@FreeBSD.org
 COMMENT=	Cross-platform Makefile generator
 WWW=		https://www.cmake.org/
