--- a/math/R-cran-BsMD/Makefile
+++ b/math/R-cran-BsMD/Makefile
@@ -1,21 +1,17 @@
 PORTNAME=	BsMD
-DISTVERSION=	2020.4.30
-PORTREVISION=	1
+DISTVERSION=	2023.707
 CATEGORIES=	math
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	eduardo@FreeBSD.org
 COMMENT=	Bayes Screening and Model Discrimination
 WWW=		https://cran.r-project.org/package=BsMD
 
-LICENSE=	GPLv2+
+LICENSE=	GPLv3+
 
-USES=	cran:auto-plist cran:compiles
+USES=	cran:auto-plist,compiles
 
 #Bogus stage-qa as this is $ARCH dependent
 NO_ARCH_IGNORE=	BsMD.so
-
-post-install:
-	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/R/library/BsMD/libs/BsMD.so
 
 .include <bsd.port.mk>
