science/rdkit: Mark BROKEN on FreeBSD 14
Fails to compile as clang crashes with:
error: clang frontend command failed with exit code 134

Have tried to build with llvm14 and llvm15 and it builds but there are
lots of modules which are not built.

Approved by:	portmgr (blanket)
Sponsored by:	The FreeBSD Foundation

--- a/science/rdkit/Makefile
+++ b/science/rdkit/Makefile
@@ -14,6 +14,7 @@ LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/license.txt
 
 BROKEN_i386=	non-constant-expression cannot be narrowed from type 'unsigned int' to 'npy_intp', see https://github.com/rdkit/rdkit/issues/4934
+BROKEN_FreeBSD_14=	fails to compile as clang crashes
 
 BUILD_DEPENDS=	catch>0:devel/catch \
 		flex:textproc/flex \
