--- a/converters/wkhtmltopdf/Makefile
+++ b/converters/wkhtmltopdf/Makefile
@@ -10,9 +10,12 @@ WWW=		https://github.com/wkhtmltopdf/wkhtmltopdf
 LICENSE=	LGPL3
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+DEPRECATED=	Upstream abandoned the project
+EXPIRATION_DATE=	2024-06-30
 BROKEN_armv6=		fails to build: error: Not supported ARM architecture
 BROKEN_armv7=		fails to build: error: invalid operand for instruction
 BROKEN_mips64=		fails to link: undefined reference to __sync_add_and_fetch_4
+BROKEN_FreeBSD_14=		fails to build: use of undeclared identifier 'needsToUnregister'
 
 RUN_DEPENDS=	webfonts>=0:x11-fonts/webfonts
 LIB_DEPENDS=	libfontconfig.so:x11-fonts/fontconfig \
