--- a/x11-fm/polo/Makefile
+++ b/x11-fm/polo/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	polo
+DISTVERSIONPREFIX=	v
 DISTVERSION=	18.8-beta
 PORTREVISION=	3
-DISTVERSIONPREFIX=	v
 CATEGORIES=	x11-fm
 
 MAINTAINER=	gnome@FreeBSD.org
@@ -16,12 +16,22 @@ LIB_DEPENDS=	libgee-0.8.so:devel/libgee \
 
 USES=		desktop-file-utils gettext-tools gmake gnome pkgconfig \
 		vala:build
-USE_GNOME=	cairo gdkpixbuf2 gtk30 libxml2 vte3
 USE_GITHUB=	yes
 GH_ACCOUNT=	teejee2008
+USE_GNOME=	cairo gdkpixbuf2 gtk30 libxml2 vte3
+
+MAKEFILE=	makefile
 
 WRKSRC_SUBDIR=	src
-MAKEFILE=	makefile
+
+.include <bsd.port.options.mk>
+
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400091 || ( ${OSVERSION} >= 1302507 && ${OSVERSION} < 1400000 ))
+USES+=	llvm:max=15
+CC=	clang${LLVM_VERSION}
+CPP=	clang-cpp${LLVM_VERSION}
+CXX=	clang++${LLVM_VERSION}
+.endif
 
 post-patch:
 	@${RM} ${WRKSRC}/share/polo/files/gtk-theme/*.orig
