security/softether5: Update to 5.02.5180-369-g5d8ff7ed

--- a/security/softether5/Makefile
+++ b/security/softether5/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	softether
-DISTVERSION=	5.02.5180-358
-DISTVERSIONSUFFIX=	-gf6f26600
+DISTVERSION=	5.02.5180-369
+DISTVERSIONSUFFIX=	-g5d8ff7ed
 PORTEPOCH=	2
 CATEGORIES=	security net-vpn
 PKGNAMESUFFIX=	5
