--- a/textproc/opensearch-dashboards/Makefile
+++ b/textproc/opensearch-dashboards/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	opensearch-dashboards
-DISTVERSION=	2.8.0
+DISTVERSION=	2.9.0
 DISTVERSIONSUFFIX=	-linux-x64
-PORTREVISION=	1
 CATEGORIES=	textproc www
 MASTER_SITES=	https://artifacts.opensearch.org/releases/bundle/${PORTNAME}/${DISTVERSION}/
 
@@ -12,11 +11,12 @@ WWW=		https://opensearch.org
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-BUILD_DEPENDS=	npm-node16>0:www/npm-node16
+BUILD_DEPENDS=	npm-node18>0:www/npm-node18
 
-USES=		nodejs:16,build,run python:build
+USES=		nodejs:18,build,run python:build
 USE_RC_SUBR=	${PORTNAME}
 
+NO_BUILD=	yes
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 OPTIONS_DEFINE=	CHROME
@@ -24,37 +24,17 @@ OPTIONS_DEFINE=	CHROME
 CHROME_DESC=	Add dependency on www/chromium (required for PDF reports)
 CHROME_RUN_DEPENDS=chrome:www/chromium
 
-NODE_VER=	16.20.0
+NODE_VER=	18.16.1
 
 _DEVDIR=	${WRKDIR}/.devdir
 
 post-patch:
-	@${REINPLACE_CMD} -e 's|%%PREFIX%%|${PREFIX}|' -e 's|%%LOCALBASE%%|${LOCALBASE}|' -e 's|%%WRKSRC%%|${WRKSRC}|' \
-		${WRKSRC}/node_modules/re2/binding.gyp
 	@${REINPLACE_CMD} -e 's|14.20.1|${NODE_VER}|g' ${WRKSRC}/package.json
 	${RM} \
 		${WRKSRC}/bin/*.orig \
 		${WRKSRC}/bin/*.bak \
-		${WRKSRC}/node_modules/re2/binding.gyp.orig \
-		${WRKSRC}/node_modules/re2/binding.gyp.bak \
 		${WRKSRC}/package.json.bak
 	${RM} -r ${WRKSRC}/plugins/reportsDashboards/.chromium
-
-do-configure:
-	(cd ${WRKSRC}/node_modules/re2 && \
-		${SETENV} HOME=${WRKDIR} PYTHONDONTWRITEBYTECODE=1 \
-		${LOCALBASE}/lib/node_modules/npm/node_modules/.bin/node-gyp configure \
-		--python=${PYTHON_CMD} \
-		--nodedir ${LOCALBASE} \
-		--devdir=${_DEVDIR})
-
-do-build:
-	(cd ${WRKSRC}/node_modules/re2 && \
-		${SETENV} HOME=${WRKDIR} PYTHONDONTWRITEBYTECODE=1 \
-		${LOCALBASE}/lib/node_modules/npm/node_modules/.bin/node-gyp build \
-		--devdir=${_DEVDIR})
-	${RM} -r ${WRKSRC}/node_modules/re2/build/Release/.deps \
-		${WRKSRC}/node_modules/re2/build/Release/obj.target
 
 do-install:
 	${MKDIR} ${STAGEDIR}${WWWDIR} ${STAGEDIR}${ETCDIR}
@@ -62,7 +42,6 @@ do-install:
 	(cd ${WRKSRC} && \
 		${COPYTREE_SHARE} "data node_modules package.json plugins src" ${STAGEDIR}${WWWDIR} && \
 		${COPYTREE_BIN} bin ${STAGEDIR}${WWWDIR})
-	${STRIP_CMD} ${STAGEDIR}${WWWDIR}/node_modules/re2/build/Release/re2.node
 
 post-install:
 	${ECHO} "@sample ${ETCDIR}/opensearch_dashboards.yml.sample" >> ${TMPPLIST}
