--- a/lang/spidermonkey91/Makefile
+++ b/lang/spidermonkey91/Makefile
@@ -52,6 +52,17 @@ CONFIGURE_ENV=	HOST_CC=${CC} \
 BINARY_ALIAS=	python3=${PYTHON_CMD}
 PLIST_SUB=	SP_VER=${SP_VER}
 
+.include <bsd.port.options.mk>
+
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400091 || ( ${OSVERSION} >= 1302505 && ${OSVERSION} < 1400000 ))
+USES+=	llvm:max=15
+CC=	clang${LLVM_VERSION}
+CPP=	clang-cpp${LLVM_VERSION}
+CXX=	clang++${LLVM_VERSION}
+CONFIGURE_ENV+=	LLVM_CONFIG=llvm-config${LLVM_VERSION} \
+		LLVM_OBJDUMP=llvm-objdump${LLVM_VERSION}
+.endif
+
 .include <bsd.port.pre.mk>
 
 .if ${ARCH} == amd64
