emulators/uae: Fix build on 14
Approved by:	portmgr (blanket)
Sponsored by:	The FreeBSD Foundation

--- a/emulators/uae/Makefile
+++ b/emulators/uae/Makefile
@@ -18,6 +18,15 @@ USE_GNOME=	gtk20
 
 OPTIONS_DEFINE=	DOCS
 
+.include <bsd.port.options.mk>
+
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400091 || ( ${OSVERSION} >= 1302507 && ${OSVERSION} < 1400000 ))
+USES+=	llvm:max=15
+CC=	clang${LLVM_VERSION}
+CPP=	clang-cpp${LLVM_VERSION}
+CXX=	clang++${LLVM_VERSION}
+.endif
+
 post-patch:
 	@${REINPLACE_CMD} -e 's|build68kc|build68k|' \
 		${WRKSRC}/src/Makefile.in
