--- a/graphics/fv/Makefile
+++ b/graphics/fv/Makefile
@@ -28,6 +28,15 @@ OPTIONS_DEFINE=	DEBUG DOCS
 
 DEBUG_CXXFLAGS_OFF=	-DNDEBUG
 
+.include <bsd.port.options.mk>
+
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400091 || ( ${OSVERSION} >= 1302505 && ${OSVERSION} < 1400000 ))
+USES+=	llvm:max=15
+CC=	clang${LLVM_VERSION}
+CPP=	clang-cpp${LLVM_VERSION}
+CXX=	clang++${LLVM_VERSION}
+.endif
+
 post-patch:
 	@${REINPLACE_CMD} -e \
 		's|^CXX=|CXX?=| ; \
