cad/pcb-rnd: Fix build on 14
Approved by:	portmgr (blanket)
Sponsored by:	The FreeBSD Foundation

--- a/cad/pcb-rnd/Makefile
+++ b/cad/pcb-rnd/Makefile
@@ -30,6 +30,15 @@ BINARY_ALIAS=	make=${MAKE_CMD}
 
 OPTIONS_DEFINE=	DOCS
 
+.include <bsd.port.options.mk>
+
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400091 || ( ${OSVERSION} >= 1302505 && ${OSVERSION} < 1400000 ))
+USES+=	llvm:max=15
+CC=	clang${LLVM_VERSION}
+CPP=	clang-cpp${LLVM_VERSION}
+CXX=	clang++${LLVM_VERSION}
+.endif
+
 post-install:
 .for f in pcb-rnd txt2bxl bxl2txt gsch2pcb-rnd
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/bin/$f
