net-mgmt/fastnetmon: Fix build on 14
- Pet portclippy

Approved by:	portmgr (blanket)
Sponsored by:	The FreeBSD Foundation

--- a/net-mgmt/fastnetmon/Makefile
+++ b/net-mgmt/fastnetmon/Makefile
@@ -28,26 +28,34 @@ USES=	cmake compiler:c++11-lang pkgconfig localbase:ldflags ssl
 USE_CXXSTD=	c++14
 USE_GITHUB=	yes
 GH_ACCOUNT=	pavel-odintsov
-
-USERS=	${PORTNAME}
-GROUPS=	${PORTNAME}
-
 USE_RC_SUBR=	${PORTNAME}
 
-OPTIONS_DEFINE=	DOCS
-
-PORTDOCS=	*
-
-CXXFLAGS += -DBOOST_STACKTRACE_GNU_SOURCE_NOT_REQUIRED \
-	    -D_GNU_SOURCE
-CFLAGS_i386=	-march=i586
-CMAKE_SOURCE_PATH=	${WRKSRC}/src
 CMAKE_ARGS+=	-DENABLE_NETMAP_SUPPORT=ON \
 		-DLINK_WITH_ABSL=ON \
 		-DSET_ABSOLUTE_INSTALL_PATH=OFF \
 		-DCMAKE_INSTALL_MANDIR=${PREFIX}/man
-
 CMAKE_INSTALL_PREFIX=	${PREFIX}
+CMAKE_SOURCE_PATH=	${WRKSRC}/src
+
+CFLAGS_i386=	-march=i586
+CXXFLAGS += -DBOOST_STACKTRACE_GNU_SOURCE_NOT_REQUIRED \
+	    -D_GNU_SOURCE
+
+USERS=	${PORTNAME}
+GROUPS=	${PORTNAME}
+
+PORTDOCS=	*
+
+OPTIONS_DEFINE=	DOCS
+
+.include <bsd.port.options.mk>
+
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400091 || ( ${OSVERSION} >= 1302505 && ${OSVERSION} < 1400000 ))
+USES+=	llvm:max=15
+CC=	clang${LLVM_VERSION}
+CPP=	clang-cpp${LLVM_VERSION}
+CXX=	clang++${LLVM_VERSION}
+.endif
 
 .include <bsd.port.pre.mk>
 
