--- a/print/dymo-cups-drivers/Makefile
+++ b/print/dymo-cups-drivers/Makefile
@@ -13,10 +13,19 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libcupsimage.so:print/cups
 
-WRKSRC=		${WRKDIR}/dymo-cups-drivers-1.4.0.5
+USES=	localbase:ldflags
 
 GNU_CONFIGURE=	yes
-CPPFLAGS+=	-I${LOCALBASE}/include
-LDFLAGS+=	-L${LOCALBASE}/lib
+
+WRKSRC=		${WRKDIR}/dymo-cups-drivers-1.4.0.5
+
+.include <bsd.port.options.mk>
+
+.if ${OPSYS} == FreeBSD && ( ${OSVERSION} >= 1400091 || ( ${OSVERSION} >= 1302505 && ${OSVERSION} < 1400000 ))
+USES+=	llvm:max=15
+CC=	clang${LLVM_VERSION}
+CPP=	clang-cpp${LLVM_VERSION}
+CXX=	clang++${LLVM_VERSION}
+.endif
 
 .include <bsd.port.mk>
