math/py-matplotlib2: Mark BROKEN on 14
- Fails to compile with:
  ISO C++17 does not allow 'register' storage class specifier
- Although this specific has easy workarounds but it fails at the stage
  post-stage with the following:
  ====> Compressing man pages (compress-man)
  pkill -15 -F /tmp/.xvfb-0.pid
  pkill: Pidfile `/tmp/.xvfb-0.pid' is empty

  The result remains unchanged even with other llvm variants.
- Mark DEPRECATED as upstream support reached EOL during 2020. See the
  following for more information:
  https://discourse.matplotlib.org/t/ann-matplotlib-2-2-0-released/20227
  Also this does not officially support python3.8 and later.
- Set EXPIRATION_DATE to 2023-09-30

Approved by:	portmgr (blanket)
Sponsored by:	The FreeBSD Foundation

--- a/math/py-matplotlib2/Makefile
+++ b/math/py-matplotlib2/Makefile
@@ -12,6 +12,10 @@ WWW=		https://matplotlib.org/
 
 LICENSE=	PSFL
 
+BROKEN_FreeBSD_14=	fails to compile: ISO C++17 does not allow 'register' storage class specifier
+DEPRECATED=	Upstream support ended in 2020 and do not support python3 versions existing on the tree
+EXPIRATION_DATE=	2023-09-30
+
 BUILD_DEPENDS=	${PYNUMPY}
 LIB_DEPENDS=	libfreetype.so:print/freetype2 \
 		libpng.so:graphics/png \
