dns/tinystats: Mark deprecated
djbdns got removed in 40a6461c672d. This port is no longer required.
Mark deprecated with a one month expiration date.

PR:		273216
Reported by:	diizzy

--- a/dns/tinystats/Makefile
+++ b/dns/tinystats/Makefile
@@ -10,6 +10,9 @@ WWW=		http://www.morettoni.net/tinystats.en.html
 
 LICENSE=	BSD2CLAUSE
 
+DEPRECATED=	djbdns got removed, port is no longer required
+EXPIRATION_DATE=	2023-09-18
+
 WRKSRC=		${WRKDIR}/${PORTNAME}
 ALL_TARGET=
 
