graphics/mesa-devel: update to 23.2.0.b.2627
Changes:	https://gitlab.freedesktop.org/mesa/mesa/-/compare/783d59eec1a...51a911cfa10

--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	23.2.0-branchpoint-2503
-DISTVERSIONSUFFIX=	-g783d59eec1a
+DISTVERSION=	23.2.0-branchpoint-2627
+DISTVERSIONSUFFIX=	-g51a911cfa10
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
