www/pacparser: Add new port
Pacparser is a library to parse proxy auto-config (PAC) files. Proxy
auto-config files are a vastly used proxy configuration method these
days. Web browsers can use a PAC file to determine which proxy server to
use or whether to go direct for a given URL. PAC files are written in
JavaScript and can be programmed to return different proxy methods
depending upon URL, source IP address, protocol, time of the day etc.
PAC files introduce a lot of possibilities.

--- a/www/Makefile
+++ b/www/Makefile
@@ -1326,6 +1326,7 @@
     SUBDIR += p5-pQuery
     SUBDIR += p5-webservice-validator-css-w3c
     SUBDIR += p5-webservice-validator-html-w3c
+    SUBDIR += pacparser
     SUBDIR += payara
     SUBDIR += pear-HTML_AJAX
     SUBDIR += pear-HTML_TagCloud
@@ -1855,8 +1856,8 @@
     SUBDIR += qt6-httpserver
     SUBDIR += qt6-webchannel
     SUBDIR += qt6-webengine
-    SUBDIR += qt6-webview
     SUBDIR += qt6-websockets
+    SUBDIR += qt6-webview
     SUBDIR += quark
     SUBDIR += qutebrowser
     SUBDIR += radicale
