devel/py-strictyaml: New port: Strict, typed YAML parser
StrictYAML is a type-safe YAML parser that parses and validates a
restricted subset of the YAML specification.

Priorities:

* Beautiful API.
* Refusing to parse the ugly, hard to read and insecure features
  of YAML like the Norway problem.
* Strict validation of markup and straightforward type casting.
* Clear, readable exceptions with code snippets and line numbers.
* Acting as a near-drop in replacement for pyyaml, ruamel.yaml or
  poyo.
* Ability to read in YAML, make changes and write it out again
  with comments preserved.
* Not speed, currently.

WWW: https://hitchdev.com/strictyaml

PR:		273232

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5618,6 +5618,7 @@
     SUBDIR += py-streamparse
     SUBDIR += py-strenum
     SUBDIR += py-strict-rfc3339
+    SUBDIR += py-strictyaml
     SUBDIR += py-stringbrewer
     SUBDIR += py-stringcase
     SUBDIR += py-structlog
