sysutils/py-director: New port: Define and run multi-jail environments with AppJail
AppJail Director is a tool for running multi-jail environments on
AppJail using a simple YAML specification. A Director file is used
to define how one or more jails that make up your application are
configured. Once you have a Director file, you can create and start
your application with a single command: appjail-director up

WWW: https://github.com/DtxdF/director

PR:		273234

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1083,6 +1083,7 @@
     SUBDIR += py-croniter
     SUBDIR += py-dict-toolbox
     SUBDIR += py-diffoscope
+    SUBDIR += py-director
     SUBDIR += py-dirsync
     SUBDIR += py-distro
     SUBDIR += py-dlipower
