databases/redis6: Mark DEPRECATED and set EXPIRATION_DATE
With the release of 7.2, 6.0 has reached its EoL.

--- a/databases/redis6/Makefile
+++ b/databases/redis6/Makefile
@@ -11,6 +11,9 @@ WWW=		https://redis.io/
 LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/COPYING
 
+DEPRECATED=	Has reached its EoL. Please migrate to newer version.
+EXPIRATION_DATE=	2023-09-30
+
 USES+=		compiler:c11 gmake tcl:test
 
 MAKE_ENV=	OPTIMIZATION= \
